syntax = "proto3";

package library;

option go_package = "/proto/library";

service LibraryService{
    rpc AddBook(AddBookRequest) returns(AddBookResponse){};
    rpc SearchBook(SearchBookRequest) returns(SearchBookResponse){};
    rpc BorrowBook(BorrowBookRequest) returns(BorrowBookResponse){}
}


message AddBookRequest{
    string BookName = 1;
    string BookAuthor = 2;
    int32 YearPublished = 3;
}

message AddBookResponse{
    string BookId = 1;
}

message SearchBookRequest{
    string Query = 1;
}

message SearchBookResponse{
    repeated Book Books = 1;
}

message BorrowBookRequest{
    string BookId = 1;
    string UserId = 2;
}

message BorrowBookResponse{
    bool status = 1;
}

message Book{
    string BookId = 1;
    string Title = 2;
    string Author = 3;
    int32 YearPublished = 4;
}